refactor(aspect): 重构 Auth 方面的代码
- 使用构造函数注入配置属性，而不是字段注入
- 优化了日志记录和异常处理
- 改进了代码结构和可读性
- 移除了未使用的代码和注释